# surveymars-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/surveymars_mcp/: __init__.py  scheme.py  server.py
src/surveymars_mcp/fetcher/: __init__.py  config.py
